--- a/style.css
+++ b/style.css
@@ -9,14 +9,18 @@ color:black;
     color:dodgerblue;
 }
 .xyz{
+    margin-left:7px;
     display:flex;
     justify-content: space-evenly;
 }
 .xyz a{
   text-decoration: none;
   color:black;
-  padding: 15px;
+  padding: 10px;
 }
 .xyz a:hover{
     color:dodgerblue;
+}
+.abc{
+    margin:auto;
 }
